Fixed the star not showing on the rating form

--- a/rating/src/app/rating-form/rating-form.component.css
+++ b/rating/src/app/rating-form/rating-form.component.css
@@ -3,6 +3,10 @@
   width: 15px;
 }
 
+.star {
+  background-color: hsl(216, 12%, 54%);
+}
+
 .form {
   display: flex;
   flex-direction: column;
